k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smwr-front-service
  labels:
    app: smwr-front
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: smwr-front
